--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
-Package: frm
+Version: 1.2.2
 Type: Package
-Title: Regression analysis of fractional responses
-Version: 1.2
-Date: 2014-05-27
-Author: Joaquim J.S. Ramalho
+Title: Regression Analysis of Fractional Responses
+Package: frm
 Maintainer: Joaquim J.S. Ramalho <jsr@uevora.pt>
-Description: This package estimates one- and two-part fractional regression models, tests the models' specification and calculates partial effects
 License: GPL-2
-Packaged: 2014-05-27 15:12:16 UTC; Joaquim
+Description: Estimation and specification analysis of one- and two-part fractional regression models and calculation of partial effects.
+Date: 2015-02-20
+Author: Joaquim J.S. Ramalho
+Packaged: 2015-02-20 16:52:05 UTC; Joaquim
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2014-05-27 20:06:52
+Date/Publication: 2015-02-21 00:48:15
